// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keys.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
$map: (
  'string': 'hello world',
  ('list'): 'hello world',
  ('key': 'value'): 'hello world',
  ('list', 'long long long long long long long long long long long long long list'): 'hello world',
  ('key': 'value','long long long long long long long long long long long long long map': 'value',): 'hello world',
);

// #10000
$map: (
	('my list'): 'hello world',
);

=====================================output=====================================
$map: (
  "string": "hello world",
  ("list"): "hello world",
  ("key": "value"): "hello world",
  (
    "list",
    "long long long long long long long long long long long long long list"
  ):
    "hello world",
  (
    "key": "value",
    "long long long long long long long long long long long long long map":
      "value"
  ):
    "hello world"
);

// #10000
$map: (
  ("my list"): "hello world"
);

================================================================================
`;

exports[`keys.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$map: (
  'string': 'hello world',
  ('list'): 'hello world',
  ('key': 'value'): 'hello world',
  ('list', 'long long long long long long long long long long long long long list'): 'hello world',
  ('key': 'value','long long long long long long long long long long long long long map': 'value',): 'hello world',
);

// #10000
$map: (
	('my list'): 'hello world',
);

=====================================output=====================================
$map: (
  "string": "hello world",
  ("list"): "hello world",
  ("key": "value"): "hello world",
  (
    "list",
    "long long long long long long long long long long long long long list",
  ):
    "hello world",
  (
    "key": "value",
    "long long long long long long long long long long long long long map":
      "value",
  ):
    "hello world",
);

// #10000
$map: (
  ("my list"): "hello world",
);

================================================================================
`;
